--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,6 +11,9 @@
   ],
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/assets/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
